fixed tv details page trailer video not covering up to 100% width

--- a/src/App.css
+++ b/src/App.css
@@ -331,7 +331,7 @@ swiper-slide img {
   margin-top: 5rem;
 }
 
-.movie .trailer-video {
+.page .trailer-video {
   aspect-ratio: 16 / 9;
   width: 100%;
   border: none;
